src/aks8/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api-namespace
  labels:
    app: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryrca1339.azurecr.io/trips-jb:1.0
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-store
            mountPath: "/secrets"
            readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: keyvault-sql
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api-namespace
spec:
  type: ClusterIP
  ports: 
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: trips
