src/aks8/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api-namespace
  labels:
    app: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryrca1339.azurecr.io/user-java-jb:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api-namespace
spec:
  type: LoadBalancer
  ports: 
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: user-java
