src/aks8/user-profile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api-namespace
  labels:
    app: userprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryrca1339.azurecr.io/userprofile-jb:1.0
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-store
            mountPath: "/secrets"
            readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: keyvault-sql
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api-namespace
spec:
  type: LoadBalancer
  ports: 
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: userprofile
